--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,31 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+
+    <filter>
+        <filter-name>MF</filter-name>
+        <filter-class>com.gerenciador.filter.MonitoramentoFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>MF</filter-name>
+        <url-pattern>/browse</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>AF</filter-name>
+        <filter-class>com.gerenciador.filter.AutorizacaoFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>AF</filter-name>
+        <url-pattern>/browse</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>CF</filter-name>
+        <filter-class>com.gerenciador.controller.ControllerFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>CF</filter-name>
+        <url-pattern>/browse</url-pattern>
+    </filter-mapping>
 </web-app>
